<?xml version="1.0"?>
<package format="2">
  <name>beast</name>
  <version>0.0.1</version>
  <description>BEAST</description>

  <maintainer email="todo@todo.todo">socrob</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>beast_msgs</build_depend>
  <build_depend>beast_srvs</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>beast_msgs</build_export_depend>
  <build_export_depend>beast_srvs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>beast_msgs</exec_depend>
  <exec_depend>beast_srvs</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
